k8s.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pastebin-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pastebin
  namespace: pastebin-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pastebin
  template:
    metadata:
      labels:
        app: pastebin
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: pastebin
          image: gas85/ownpastebin:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: local-volume
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /config?liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /config?readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 2
          startupProbe:
            httpGet:
              path: /config?startup
              port: 8080
            failureThreshold: 10
            periodSeconds: 5
          # --- RESOURCE LIMITS ----
          resources:
            limits:
              memory: 4Gi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
      volumes:
        - name: local-volume
          persistentVolumeClaim:
            claimName: pastebin-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastebin
  namespace: pastebin-namespace
spec:
  rules:
    - host: pastebin.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pastebin
                port:
                  number: 8080
  tls:
    - hosts:
        - pastebin.domain
      secretName: pastebin-tls
---
apiVersion: v1
kind: Service
metadata:
  name: pastebin
  namespace: pastebin-namespace
spec:
  type: ClusterIP
  selector:
    app: pastebin
  ports:
    - name: http
      port: 8080
      targetPort: 8080
